# coutinho2017

./: .gitignore  DESIGN.md  README.md  TODO.md  pipeline.py  pyproject.toml  requirements.txt  run_video_tests.py
benchmarks/: compaction_benchmark.py  compression_performance.py  tracking_efficiency.py
src/core/: approximations.py  quantization.py
src/coutinho2017/core/: approximations.py  quantization.py  tensor_ops.py
src/coutinho2017/tracking/: tracker.py
src/coutinho2017/utils/: metrics.py  video_io.py
tests/: test_3d_transform.py  test_compaction.py  test_compaction2.py  test_compression.py
